--- a/perm/android-perm-extraction/com.arc.android.permission.prober.android/manifest.json
+++ b/perm/android-perm-extraction/com.arc.android.permission.prober.android/manifest.json
@@ -8,7 +8,7 @@
     "apkList": [
       "custom-android-release-1400197.apk"
     ],
-    "enableAdb",
+    "enableAdb": true,
     "enableExternalDirectory": false,
     "formFactor": "phone",
     "name": "com.arc.android.permission.prober",
